# Generate files of various sizes.
[
    genrule(
        name = "File_{}MB".format(size_mb),
        outs = ["file{}mb.bin".format(size_mb)],
        cmd_bash = "set -x; dd if=/dev/zero of=$(@) bs=1024 count={}".format(1024 * size_mb),
    )
    for size_mb in [
        1,
        10,
        30,
        50,
        100,
        200,
    ]
]
