# Generate files of various sizes.
[
    genrule(
        name = "File_{}MB".format(size_mb),
        outs = ["file{}mb.bin".format(size_mb)],
        cmd_bash = "set -x; dd if=/dev/zero of=$(@) bs=1024 count={}".format(1024 * size_mb),
    )
    for size_mb in [
        1,
        10,
        30,
        50,
        100,
        200,
    ]
]

# Generate equal-sized files with distinct CAS digests for the concurrency test.
[
    genrule(
        name = "File_50MB_{}".format(index),
        outs = ["file50mb_{}.bin".format(index)],
        cmd_bash = (
            "set -e; " +
            "dd if=/dev/zero of=$(@) bs=1024 count=51200; " +
            "printf 'remote-cache-tester-{}' | dd of=$(@) conv=notrunc".format(index)
        ),
    )
    for index in range(1, 9)
]
